tests/lifetime_inference/escaping_local_error.june
// error: allocation is not local

struct Stats {
    age: i64
}

fun foo() -> Stats {
    return local Stats(age: 100)
}

fun main() {
    println(foo().age)
}